--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <h1>Aneela Banda</h1>
+            <h1><a href="#home">Aneela Banda</a></h1>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li>
-                    <a href="https://drive.google.com/file/d/1_fuhU6LC4P-hjiRVYfEk6W9-ic0Gfwgy/view" target="_blank" rel="nofollow">
+                    <a href="#" onclick="window.open('https://drive.google.com/file/d/1_fuhU6LC4P-hjiRVYfEk6W9-ic0Gfwgy/view', '_blank', 'noopener'); return false;">
                         Resume
                     </a>
                 </li>
+                
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <header>
+    <header id="home">
         <div class="header-content">
             <h2>Hey, I'm Aneela Banda</h2>
             <p>A goal-oriented web developer specializing in building and maintaining websites and web applications to enhance product success.</p>
@@ -110,13 +111,32 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section">
-        <h2>Contact Me</h2>
-        <div class="contact-info">
-            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:aneela2106@gmail.com">aneela2106@gmail.com</a></p>
-            <p><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/aneela-banda-a56852193/" target="_blank" rel="noopener noreferrer">linkedin.com/in/aneela-banda</a></p>
+    <!-- Contact Section -->
+<section id="contact" class="section">
+    <h2>Let's Connect!</h2>
+    <p>Feel free to reach out through any of the platforms below. I'm always open to discussing new opportunities and collaborations.</p>
+
+    <div class="contact-cards">
+        <div class="contact-card">
+            <i class="fas fa-envelope"></i>
+            <h3>Email</h3>
+            <p><a href="mailto:aneela2106@gmail.com">aneela2106@gmail.com</a></p>
         </div>
-    </section>
+        
+        <div class="contact-card">
+            <i class="fab fa-linkedin"></i>
+            <h3>LinkedIn</h3>
+            <p><a href="https://www.linkedin.com/in/aneela-banda-a56852193/" target="_blank" rel="noopener noreferrer">linkedin.com/in/aneela-banda</a></p>
+        </div>
+
+        <div class="contact-card">
+            <i class="fab fa-github"></i>
+            <h3>GitHub</h3>
+            <p><a href="https://github.com/aneelabanda" target="_blank" rel="noopener noreferrer">github.com/aneelabanda</a></p>
+        </div>
+    </div>
+</section>
+
     <!-- Footer with Social Links -->
     <footer>
         <div class="footer-left">
