--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Aneela Banda, Frontend Developer with 3 years of experience in ReactJS and web technologies.">
-    <title>Aneela Banda - Frontend Developer</title>
+    <title>Aneela Banda - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="container">
             <h1><a href="#home">Aneela Banda</a></h1>
-            <ul>
+            <ul id="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -23,11 +23,14 @@
                         Resume
                     </a>
                 </li>
-                
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="hamburger" id="hamburger">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </nav>
+    
 
     <!-- Hero Section -->
     <header id="home">
