almost final_basic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
+
     <nav class="navbar">
         <div class="container">
             <h1><a href="#home">Aneela Banda</a></h1>
@@ -43,13 +44,14 @@
     <!-- About Section -->
     <!-- About Section -->
 <!-- About Section -->
+<!-- About Section -->
 <section id="about" class="section">
     <h2>About Me</h2>
     <div class="about-container">
         <div class="about-text">
-            <h3>Who I Am</h3> <!-- Side heading -->
+            <h3>Insights Into My Professional Journey</h3>
             <p>I am a results-driven web developer with over three years of experience in building dynamic web applications, specializing in ReactJS, Python, and Django. With a solid foundation in HTML, CSS, and JavaScript, I focus on creating responsive, user-friendly interfaces that drive product success. My commitment to quality and accessibility enables me to deliver innovative solutions that enhance user experience while collaborating effectively with cross-functional teams.</p>
-            <p class="tagline">Striving for excellence in every project I undertake.</p> <!-- One-line content -->
+            <p class="tagline">Striving for excellence in every project I undertake.</p>
         </div>
         <div class="skills-column">
             <h3>Major Skills</h3>
@@ -59,13 +61,16 @@
                 <span class="skill">CSS3</span>
                 <span class="skill">JavaScript</span>
                 <span class="skill">TypeScript</span>
+                <span class="skill">Responsive Design</span>
                 <span class="skill">Bootstrap</span>
                 <span class="skill">Redux</span>
+                <span class="skill">Python</span>
                 <span class="skill">Node.js</span>
             </div>
         </div>
     </div>
 </section>
+
 
 
 
