--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio of Aneela Banda, Frontend Developer with 3 years of experience in ReactJS and web technologies.">
     <title>Aneela Banda - Portfolio</title>
+    <link rel="icon" href="images/vector_portfolio.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
