--- a/index.html
+++ b/index.html
@@ -80,22 +80,23 @@
         <h2>Professional Experience</h2>
         <div class="card-container">
             <div class="card">
-                <h3>FrontEnd Developer</h3>
-                <h4>EnCiv, USA (July 2024 - present)</h4>
-                <p>In my role as a Frontend Developer, I focused on creating responsive and interactive user interfaces using ReactJS and JavaScript frameworks. I implemented design prototypes and collaborated closely with UI/UX designers to deliver high-fidelity visuals that aligned with user needs. My efforts significantly enhanced application usability and overall customer satisfaction.</li>
-                    <!-- <li>Implemented responsive designs and improved UX across university platforms.</li>
-                    <li>Utilized Docker for containerized development environments.</li> -->
-                </p>
-            </div>
-            <div class="card">
                 <h3>Preprofessional Graduate Assistant</h3>
                 <h4>Illinois State University, USA (Jan 2023 - May 2024)</h4>
-                <p> As a Preprofessional Graduate Assistant at Illinois State University, I spearheaded front-end development for the university’s digital platforms using HTML5, CSS3, JavaScript, and Bootstrap. Through research initiatives and WordPress implementation, I improved user experience across 90% of the university's online presence. My work led to a 40% improvement in web accessibility and streamlined deployment processes through Docker integration.                </p>
+                <p> As a Preprofessional Graduate Assistant at Illinois State University, I led front-end development for digital platforms using HTML5, CSS3, JavaScript, and Bootstrap. By implementing WordPress and conducting research, I enhanced UX across 90% of the university’s online presence, improved web accessibility by 40%, and optimized deployment with Docker.</p>
             </div>
             <div class="card">
                 <h3>Web Developer</h3>
                 <h4>Tata Consultancy Services, India (Jan 2021 - Dec 2022)</h4>
                 <p>During my tenure at Tata Consultancy Services, I leveraged JavaScript frameworks like ReactJS and Node.js to build dynamic web applications with a focus on high-quality, scalable code. I led responsive design initiatives that improved user experience by 30% through effective Client-Side Rendering techniques. Additionally, I collaborated cross-functionally to optimize website operations, leading to enhanced application reliability and significant efficiency gains.</p>
+            </div>
+            <div class="card">
+                <h3>FrontEnd Developer</h3>
+                <h4>EnCiv, USA (July 2024 - present)</h4>
+                <p>Designed data-driven dashboards in Android Studio using HTML, CSS, and material design principles. Improved user satisfaction by 20% through intuitive interfaces, integrated real-time RESTful APIs, and reduced drop-off by 15% via usability testing. Optimized load times by 25% with lazy loading and managed code using Git.
+                    
+                    <!-- <li>Implemented responsive designs and improved UX across university platforms.</li>
+                    <li>Utilized Docker for containerized development environments.</li> -->
+                </p>
             </div>
         </div>
     </section>
