--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <p>During my tenure at Tata Consultancy Services, I leveraged JavaScript frameworks like ReactJS and Node.js to build dynamic web applications with a focus on high-quality, scalable code. I led responsive design initiatives that improved user experience by 30% through effective Client-Side Rendering techniques. Additionally, I collaborated cross-functionally to optimize website operations, leading to enhanced application reliability and significant efficiency gains.</p>
             </div>
             <div class="card">
-                <h3>FrontEnd Developer</h3>
-                <h4>EnCiv, USA (July 2024 - present)</h4>
+                <h3>Application Developer</h3>
+                <h4>Data Ready LTD (August 2019 - December 2019)</h4>
                 <p>Designed data-driven dashboards in Android Studio using HTML, CSS, and material design principles. Improved user satisfaction by 20% through intuitive interfaces, integrated real-time RESTful APIs, and reduced drop-off by 15% via usability testing. Optimized load times by 25% with lazy loading and managed code using Git.
                     
                     <!-- <li>Implemented responsive designs and improved UX across university platforms.</li>
