--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li>
-                    <a href="#" onclick="window.open('https://drive.google.com/file/d/1_fuhU6LC4P-hjiRVYfEk6W9-ic0Gfwgy/view', '_blank', 'noopener'); return false;">
+                    <a href="#" onclick="window.open('https://drive.google.com/file/d/1M0fS83Vd6yBNMnqmmhVOgcziJjNvzhT7/view?usp=sharing', '_blank', 'noopener'); return false;">
                         Resume
                     </a>
                 </li>
@@ -80,6 +80,15 @@
         <h2>Professional Experience</h2>
         <div class="card-container">
             <div class="card">
+                <h3>Front End Developer</h3>
+                <h4>EnCiv</h4>
+                <p>Developed reusable ReactJS components, optimizing JavaScript for 40% faster page loads and ensuring CSS consistency. Integrated MongoDB for 25% faster data retrieval, used Storybook to reduce UI bugs, and implemented Context API for scalability.
+                    
+                    <!-- <li>Implemented responsive designs and improved UX across university platforms.</li>
+                    <li>Utilized Docker for containerized development environments.</li> -->
+                </p>
+            </div>
+            <div class="card">
                 <h3>Preprofessional Graduate Assistant</h3>
                 <h4>Illinois State University, USA (Jan 2023 - May 2024)</h4>
                 <p> As a Preprofessional Graduate Assistant at Illinois State University, I led front-end development for digital platforms using HTML5, CSS3, JavaScript, and Bootstrap. By implementing WordPress and conducting research, I enhanced UX across 90% of the university’s online presence, improved web accessibility by 40%, and optimized deployment with Docker.</p>
@@ -88,15 +97,6 @@
                 <h3>Web Developer</h3>
                 <h4>Tata Consultancy Services, India (Jan 2021 - Dec 2022)</h4>
                 <p>During my tenure at Tata Consultancy Services, I leveraged JavaScript frameworks like ReactJS and Node.js to build dynamic web applications with a focus on high-quality, scalable code. I led responsive design initiatives that improved user experience by 30% through effective Client-Side Rendering techniques. Additionally, I collaborated cross-functionally to optimize website operations, leading to enhanced application reliability and significant efficiency gains.</p>
-            </div>
-            <div class="card">
-                <h3>Application Developer</h3>
-                <h4>Data Ready LTD (August 2019 - December 2019)</h4>
-                <p>Designed data-driven dashboards in Android Studio using HTML, CSS, and material design principles. Improved user satisfaction by 20% through intuitive interfaces, integrated real-time RESTful APIs, and reduced drop-off by 15% via usability testing. Optimized load times by 25% with lazy loading and managed code using Git.
-                    
-                    <!-- <li>Implemented responsive designs and improved UX across university platforms.</li>
-                    <li>Utilized Docker for containerized development environments.</li> -->
-                </p>
             </div>
         </div>
     </section>
@@ -136,7 +136,7 @@
         <div class="contact-card">
             <i class="fab fa-linkedin"></i>
             <h3>LinkedIn</h3>
-            <p><a href="https://www.linkedin.com/in/aneela-banda-a56852193/" target="_blank" rel="noopener noreferrer">linkedin.com/in/aneela-banda</a></p>
+            <p><a href="https://www.linkedin.com/in/aneela-banda/" target="_blank" rel="noopener noreferrer">linkedin.com/in/aneela-banda</a></p>
         </div>
 
         <div class="contact-card">
@@ -153,7 +153,7 @@
             <p>Aneela Banda</p>
         </div>
         <div class="footer-right">
-            <a href="https://www.linkedin.com/in/aneela-banda-a56852193/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/aneela-banda/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/aneelabanda" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </footer>
