--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </p>
             </div>
             <div class="card">
-                <h3>Preprofessional Graduate Assistant</h3>
+                <h3>Front End Developer</h3>
                 <h4>Illinois State University, USA </h4>
                 <h4>(Jan 2023 - May 2024)</h4>
                 <p> As a Preprofessional Graduate Assistant at Illinois State University, I led front-end development for digital platforms using HTML5, CSS3, JavaScript, and Bootstrap. By implementing WordPress and conducting research, I enhanced UX across 90% of the university’s online presence, improved web accessibility by 40%, and optimized deployment with Docker.</p>
