--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="about-container">
         <div class="about-text">
             <h3>Insights Into My Professional Journey</h3>
-            <p>I am a results-driven web developer with over three years of experience in building dynamic web applications, specializing in ReactJS, Python, and Django. With a solid foundation in HTML, CSS, and JavaScript, I focus on creating responsive, user-friendly interfaces that drive product success. My commitment to quality and accessibility enables me to deliver innovative solutions that enhance user experience while collaborating effectively with cross-functional teams.</p>
+            <p>I am a results-driven web developer with 4 years of experience in building dynamic web applications, specializing in ReactJS, Python, and Django. With a solid foundation in HTML, CSS, and JavaScript, I focus on creating responsive, user-friendly interfaces that drive product success. My commitment to quality and accessibility enables me to deliver innovative solutions that enhance user experience while collaborating effectively with cross-functional teams.</p>
             <p class="tagline">Striving for excellence in every project I undertake.</p>
         </div>
         <div class="skills-column">
