--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="card">
                 <h3>Front End Developer</h3>
                 <h4>EnCiv, USA</h4>
-                <h4>(Jul 2024 - present)</h4>
+                <!-- <h4>(Jul 2024 - present)</h4> -->
                 <p>Developed reusable ReactJS components, optimizing JavaScript for 40% faster page loads and ensuring CSS consistency. Integrated MongoDB for 25% faster data retrieval, used Storybook to reduce UI bugs, and implemented Context API for scalability.
                     
                     <!-- <li>Implemented responsive designs and improved UX across university platforms.</li>
@@ -96,13 +96,13 @@
             <div class="card">
                 <h3>Front End Developer</h3>
                 <h4>Illinois State University, USA </h4>
-                <h4>(Jan 2023 - May 2024)</h4>
+                <!-- <h4>(Jan 2023 - May 2024)</h4> -->
                 <p> As a Preprofessional Graduate Assistant at Illinois State University, I led front-end development for digital platforms using HTML5, CSS3, JavaScript, and Bootstrap. By implementing WordPress and conducting research, I enhanced UX across 90% of the university’s online presence, improved web accessibility by 40%, and optimized deployment with Docker.</p>
             </div>
             <div class="card">
                 <h3>Web Developer</h3>
                 <h4>Tata Consultancy Services, INDIA</h4>
-                <h4> (Jan 2021 - Dec 2022) </h4>
+                <!-- <h4> (Jan 2021 - Dec 2022) </h4> -->
                 <p>During my tenure at Tata Consultancy Services, I leveraged JavaScript frameworks like ReactJS and Node.js to build dynamic web applications with a focus on high-quality, scalable code. I led responsive design initiatives that improved user experience by 30% through effective Client-Side Rendering techniques. Additionally, I collaborated cross-functionally to optimize website operations, leading to enhanced application reliability and significant efficiency gains.</p>
             </div>
         </div>
